--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
     <EditText
         android:id="@+id/Field"
         android:textSize="40pt"
-        android:background="@color/grey"
+        android:background="@color/black"
+        android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -22,7 +23,8 @@
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/grey">
 
         <TableRow
             android:layout_width="match_parent"
@@ -31,48 +33,65 @@
             <Button
                 android:id="@+id/buttPercent"
                 android:onClick="clckPrecent"
+                android:soundEffectsEnabled="false"
                 android:text="%"
+                android:textStyle="bold|normal"
+                android:textSize="10pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/green"/>
 
             <Button
                 android:id="@+id/buttCE"
                 android:onClick="clckClear"
+                android:soundEffectsEnabled="false"
                 android:text="CE"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/red"/>
 
             <Button
                 android:id="@+id/buttC"
                 android:onClick="clckClear"
+                android:soundEffectsEnabled="false"
                 android:text="C"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/red"/>
 
             <Button
                 android:id="@+id/butt1DevideX"
                 android:onClick="mathAction"
+                android:soundEffectsEnabled="false"
                 android:text="1/x"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/green"/>
         </TableRow>
     </TableLayout>
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/grey">
 
         <TableRow
             android:layout_width="match_parent"
@@ -81,48 +100,65 @@
             <Button
                 android:id="@+id/buttXsquared2"
                 android:onClick="mathAction"
+                android:soundEffectsEnabled="false"
                 android:text="x²"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/green"/>
 
             <Button
                 android:id="@+id/buttXsquaredK"
                 android:onClick="mathAction"
+                android:soundEffectsEnabled="false"
                 android:text="x\u1D4F"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/green"/>
 
             <Button
                 android:id="@+id/buttSqrtX"
                 android:onClick="mathAction"
+                android:soundEffectsEnabled="false"
                 android:text="√x"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/green"/>
 
             <Button
                 android:id="@+id/buttDevide"
                 android:onClick="mathAction"
+                android:soundEffectsEnabled="false"
                 android:text="/"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/green"/>
             </TableRow>
         </TableLayout>
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/grey">
 
         <TableRow
             android:layout_width="match_parent"
@@ -131,48 +167,65 @@
             <Button
                 android:id="@+id/butt7"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="7"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/butt8"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="8"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/butt9"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="9"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/buttMultiply"
                 android:onClick="mathAction"
+                android:soundEffectsEnabled="false"
                 android:text="*"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/green"/>
         </TableRow>
     </TableLayout>
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/grey">
 
         <TableRow
             android:layout_width="match_parent"
@@ -181,48 +234,65 @@
             <Button
                 android:id="@+id/butt4"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="4"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/butt5"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="5"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/butt6"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="6"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/buttMinus"
                 android:onClick="mathAction"
+                android:soundEffectsEnabled="false"
                 android:text="-"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/green"/>
         </TableRow>
     </TableLayout>
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/grey">
 
         <TableRow
             android:layout_width="match_parent"
@@ -231,48 +301,65 @@
             <Button
                 android:id="@+id/butt1"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="1"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/butt2"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="2"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/butt3"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="3"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/buttPlus"
                 android:onClick="mathAction"
+                android:soundEffectsEnabled="false"
                 android:text="+"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/green"/>
         </TableRow>
     </TableLayout>
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/grey">
 
         <TableRow
             android:layout_width="match_parent"
@@ -281,42 +368,58 @@
             <Button
                 android:id="@+id/buttReverseSign"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="+/-"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/butt0"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="0"
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/buttDot"
                 android:onClick="clckNumb"
+                android:soundEffectsEnabled="false"
                 android:text="."
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/grey"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/buttResult"
                 android:onClick="clckRes"
+                android:soundEffectsEnabled="false"
                 android:text="="
+                android:textStyle="bold|normal"
+                android:textSize="8pt"
                 android:width="30pt"
                 android:height="30pt"
                 android:layout_weight="1"
                 android:layout_marginRight="1pt"
-                android:backgroundTint="@color/blue"/>
+                android:backgroundTint="@color/green"
+                android:textColor="@color/white"/>
         </TableRow>
     </TableLayout>
 
