--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="grey">#676262</color>
+    <color name="grey">#424040</color>
     <color name="blue">#4158B3</color>
+    <color name="green">#2EB650</color>
+    <color name="red">#E82A24</color>
 </resources>
